<resources>
    <string name="app_name">BodyBoost</string>
    <string name="OneTap">952578671914-fi5f2r9p799es7ptpeudpgv645met1ih.apps.googleusercontent.com</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="check_in">每日打卡版</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="check_password">確認密碼</string>
    <string name="search">Search</string>
    <string name="recently_sport">近期運動</string>
    <string name="other_sport">其他運動</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="back" />
    <string name="weight_input">輸入體重</string>
    <string name="weight_record">體重記錄</string>
    <string name="calorie_consumption">消耗熱量</string>
    <string name="nutrient_content">營養成分比例</string>
    <string name="type_custom">自訂類別</string>
    <string name="type_grains">五榖澱粉類</string>
    <string name="type_egg_meat_fish">蛋肉魚類</string>
    <string name="type_vegetables">蔬菜類</string>
    <string name="type_fruits">水果類</string>
    <string name="type_dairy_products">乳品類</string>
    <string name="type_beans">豆類</string>
    <string name="type_beverages">飲料類</string>
    <string name="type_alcohol">酒類</string>
    <string name="type_oil_nuts">油脂與堅果類</string>
    <string name="type_snacks">零食點心</string>
    <string name="type_fast_food">速食類</string>
    <string name="type_condiment">調味品</string>
    <string name="type_dish">菜餚類</string>
    <string name="type_others">其他類別</string>
    <string name="breakfast">早餐</string>
    <string name="options">食物選項</string>
    <string name="continue_add">繼續新增</string>
    <string name="complete_add">新增完成</string>
    <string name="search_food">搜尋</string>
    <string name="zero_number">0.0</string>
    <string name="edit_personal_info">個人資訊編輯</string>
    <string name="pro">會員</string>
    <string name="picture">picture</string>
    <string name="id">帳號</string>
    <string name="password">密碼</string>
    <string name="email">電子郵件</string>
    <string name="bmi">BMI</string>
    <string name="sport">Sport</string>
    <string name="report">Report</string>
    <string name="home">Home</string>
    <string name="record">Record</string>
    <string name="achievement">Achievement</string>
    <string name="register">註冊</string>
    <string name="personal_info">個人資訊</string>
    <string name="username">姓名</string>
    <string name="height">身高</string>
    <string name="gender">性別</string>
    <string name="g" />
    <string name="ml" />
    <string name="not_required_items">非必填</string>
    <string name="required_items">必填</string>
    <string name="complete">完成</string>
    <string name="add_custom_food">新增自訂食物</string>
    <string name="water_intake">飲水量</string>
    <string name="carb">碳水化合物</string>
    <string name="g_chinese">克</string>
    <string name="calorie">熱量</string>
    <string name="kcal">大卡</string>
    <string name="protein">蛋白質</string>
    <string name="fat">脂肪</string>
    <string name="sodium">鈉</string>
    <string name="mg_chinese">毫克</string>
    <string name="add">新增</string>
    <string name="back_chinese">返回</string>

    <!-- sport -->
    <string name="sport_item_type_aerobics">有氧</string>
    <string name="sport_item_type_anaerobic">無氧</string>
    <string name="sport_item_timing">計時</string>
    <string name="sport_item_counting">計次</string>
</resources>