<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/sport"
        android:title="@string/sport"
        android:icon="@drawable/push_up"/>
    <item
        android:id="@+id/report"
        android:title="@string/report"
        android:icon="@drawable/baseline_bar_chart_24"/>
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"/>
    <item
        android:id="@+id/record"
        android:title="@string/record"
        android:icon="@drawable/meal"/>
    <item
        android:id="@+id/achievement"
        android:title="@string/achievement"
        android:icon="@drawable/trophy_cup_silhouette"
        />

</menu>