<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/sport_border"
    android:orientation="vertical"
    android:padding="12dp"
    android:layout_marginBottom="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        tools:ignore="UselessParent"
        android:layout_marginBottom="4dp">

        <TextView
            android:id="@+id/sport_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sport_item_type_aerobics"
            android:background="@color/sportItemsColor_yellow"
            android:textColor="@color/white"
            android:paddingVertical="5dp"
            android:paddingHorizontal="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/sport_timing_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sport_item_timing"
            android:background="@color/sportItemsColor_purple"
            android:textColor="@color/white"
            android:paddingVertical="5dp"
            android:paddingHorizontal="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/sport_counting_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sport_item_counting"
            android:background="@color/sportItemsColor_blue"
            android:textColor="@color/white"
            android:paddingVertical="5dp"
            android:paddingHorizontal="8dp"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="start"
        android:layout_marginBottom="4dp">

        <ImageView
            android:id="@+id/sport_animation"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/sport_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/Second"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/sport_default_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/Second_light"
                android:textStyle="bold"
                android:layout_marginBottom="12dp"
                android:textSize="14sp"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="點擊前往運動"
        android:textColor="@color/Second_light_double"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:textSize="12sp"/>

</LinearLayout>