<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Yellow"
    tools:context=".CustomFoodAddActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Lavender"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/add_custom_food"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/back"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/Lavender"
        android:drawableLeft="@drawable/baseline_arrow_back_ios_new_24"
        android:drawableTint="@color/white"
        android:elevation="0dp"
        android:stateListAnimator="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlHardcoded,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/text_food_name"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginStart="20dp"
        android:text="食物名稱："
        android:textAlignment="textEnd"
        android:textColor="@color/TextColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back" />

    <EditText
        android:id="@+id/foodName"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/custom_edittext"
        android:hint="必填"
        android:paddingHorizontal="15dp"
        android:text=""
        android:textColor="@color/TextColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_food_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_food_name"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/text_food_calorie"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="20dp"
        android:text="熱量："
        android:textAlignment="textEnd"
        android:textColor="@color/TextColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_food_name" />

    <EditText
        android:id="@+id/foodCalorie"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/required_items"
        android:paddingHorizontal="15dp"
        android:inputType="numberDecimal"
        android:text=""
        android:textColor="@color/TextColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_food_calorie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_food_calorie"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/text_food_size"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="20dp"
        android:text="容量："
        android:textAlignment="textEnd"
        android:textColor="@color/TextColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_food_calorie" />

    <EditText
        android:id="@+id/foodSize"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/custom_edittext"
        android:hint="必填"
        android:paddingHorizontal="15dp"
        android:inputType="numberDecimal"
        android:text=""
        android:textColor="@color/TextColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_food_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_food_size"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/text_food_unit"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="20dp"
        android:text="容量單位："
        android:textAlignment="textEnd"
        android:textColor="@color/TextColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_food_size" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/text_food_unit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_food_unit">

        <RadioButton
            android:id="@+id/radioButton_g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/g"
            android:textSize="25sp"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButton_ml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/ml"
            android:textSize="25sp"
            tools:ignore="TouchTargetSizeCheck" />

    </RadioGroup>

    <TextView
        android:id="@+id/text_food_protein"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="20dp"
        android:text="蛋白質："
        android:textAlignment="textEnd"
        android:textColor="@color/TextColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_food_unit" />

    <EditText
        android:id="@+id/foodProtein"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/not_required_items"
        android:inputType="numberDecimal"
        android:paddingHorizontal="15dp"
        android:text=""
        android:textColor="@color/TextColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_food_protein"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_food_protein"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/text_food_fat"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="20dp"
        android:text="脂肪："
        android:textAlignment="textEnd"
        android:textColor="@color/TextColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_food_protein" />

    <EditText
        android:id="@+id/foodFat"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/not_required_items"
        android:inputType="numberDecimal"
        android:paddingHorizontal="15dp"
        android:text=""
        android:textColor="@color/TextColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_food_fat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_food_fat"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/text_food_carb"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="20dp"
        android:text="碳水化合物："
        android:textAlignment="textEnd"
        android:textColor="@color/TextColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_food_fat" />

    <EditText
        android:id="@+id/foodCarb"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/not_required_items"
        android:inputType="numberDecimal"
        android:paddingHorizontal="15dp"
        android:text=""
        android:textColor="@color/TextColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_food_carb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_food_carb"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/text_food_sodium"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="20dp"
        android:text="鈉："
        android:textAlignment="textEnd"
        android:textColor="@color/TextColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_food_carb" />

    <EditText
        android:id="@+id/foodSodium"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/not_required_items"
        android:inputType="numberDecimal"
        android:paddingHorizontal="15dp"
        android:text=""
        android:textColor="@color/TextColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_food_sodium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_food_sodium"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/inputFinished"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button"
        android:text="@string/complete"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>